...
        android:textColor="#FF0000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/passLogin"
        app:layout_constraintTop_toBottomOf="@+id/passLogin" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="Entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLogin"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
